gvfs-open: also replace dashes when computing object path

This is what GApplication does, and we should do it here too, or
gvfs-open won't work for DBus-activatable applications with dashses in
their app IDs.

https://bugzilla.gnome.org/show_bug.cgi?id=768410